Fix weather-card footer alignment

--- a/src/weather/components/weather-card/weather-card.scss
+++ b/src/weather/components/weather-card/weather-card.scss
@@ -44,6 +44,7 @@
 
 .weather-card__definition-list {
   display: flex;
+  justify-content: space-around;
 
   text-align: center;
 
